Switch to PooledHttpClient